hello.yml
kind: Deployment   
apiVersion: apps/v1  
metadata:
  name: hello  
spec:
  replicas: 2    
  selector:       # equality based selectors or set based selectors
    matchLabels:   # this is equality based selector
      app: hello  
  template:
    metadata:
      name: helloapp
      labels:
        app: hello  
    spec:   
      containers:  
      - name: helloapp
        image: mylandmarktech/hello
        ports:
        - containerPort: 80
        

---
kind: Service
apiVersion: v1
metadata:
  name: hellosvc
spec:
  type: ClusterIP
  ports:
  - targetPort: 80
    port: 80
  selector:
    app: hello
