ingress-rule.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress-rule
spec:
  ingressClassName: nginx
  rules:
  - host: springapp.zaralinktech.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: springappsvc
            port:
              number: 80
  - host: hello.zaralinktech.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hellosvc
            port:
              number: 80
  - host: java.zaralinktech.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: webappsvc
            port:
              number: 80
